Updates to MSState/Basic Template for The W
Changed some small details of the MSState page. Also set up a basic template for The W

--- a/msstateDrupal.html
+++ b/msstateDrupal.html
@@ -298,6 +298,19 @@
 															<div class="jumbotron text-center">
 																<h1>Repertorium Chronicarum</h1>
 																<h2>A Bibliography of the Manuscripts of Medieval Latin Chronicles</h2>
+																<div class="row search hidden-xs">
+																	<div class="col-sm-12">
+																		<form class="search-form" role="search" action="" method="get">
+																			<label class="sr-only" for="search-terms">Search MSSTATE</label>
+																			<input id="search-terms" class="form-control" name="terms" placeholder="Search Repertorium Chronicarum" type="text">
+																			<button class="form-control" type="submit" title="Search">
+																				<i class="glyphicon glyphicon-search">
+																					<span class="sr-only">Search</span>
+																				</i>
+																			</button>
+																		</form>
+																	</div>
+																</div>
 															</div>
 														</div>
                                                     </div>
@@ -363,7 +376,7 @@
                                 </div>
                                 <address class="line">
 	<strong>Mississippi State University</strong><br />
-	<span class="darker">Street Address Here<br />	Mississippi State, MS 39762<br />
+	<span class="darker">395 Hardy Rd.<br />	Mississippi State, MS 39762<br />
 	<abbr title="Phone">P:</abbr> <a href="tel:(662) 325-2323">(662) 325-2323</a></span>
 </address>
                                 <div class="clearfix"></div>
