Firebase code added
Lines 66-90 on msstateDrupal.html

--- a/theW.html
+++ b/theW.html
@@ -127,7 +127,7 @@
                         <div class="rt-flex-container">
                             <div class="rt-grid-6 rt-alpha">
                                 <div class="rt-logo-block">
-                                    <a href="/" id="rt-logo"><span class="hidetext">MUW Homepage</span></a>
+                                    <a href="/" id="rt-logo"><span class="hidetext">MUW Women's Database</span></a>
                                 </div>
 
                             </div>
