--- a/msstateDrupal.html
+++ b/msstateDrupal.html
@@ -63,6 +63,31 @@
     <script src="//cdn01.its.msstate.edu/e/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="js/scripts.js"></script>
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-analytics.js"></script>
+
+    <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyB-tSkzU4e8wq9L5YLEQfDryKjVsvocoN4",
+        authDomain: "senior-project-5703b.firebaseapp.com",
+        databaseURL: "https://senior-project-5703b.firebaseio.com",
+        projectId: "senior-project-5703b",
+        storageBucket: "senior-project-5703b.appspot.com",
+        messagingSenderId: "45119898699",
+        appId: "1:45119898699:web:772bd7fbccabbcc6fdb9ce",
+        measurementId: "G-PRRQH9JNSR"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+    </script>
+    <script type="text/javascript" src="search.js"></script>
+
 </head>
 
 <body class="basedrupal  simplean ">
