--- a/theW.html
+++ b/theW.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="Wsearch.js"></script>
     <base href="https://www.muw.edu/library" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="rights" content="©1996-2019 Mississippi University for Women" />
@@ -188,19 +189,12 @@
                                             <div style="max-width:1200px; margin:auto;background-color:rgba(0, 0, 0, 0.5); padding: 15px;">
                                                 <h3 style="color: #FFF;">Search Mississippi Women's Archival Database</h3>
                                                 <div style="margin-left: 25px; width: 100%;">
-                                                    <!-- EBSCO discovery Box Begins -->
                                                     <script src="https://support.ebscohost.com/eit/scripts/ebscohostsearch.js" type="text/javascript"></script>
-                                                    <form action="" onSubmit="return ebscoHostSearchGo(this);" method="post">
-                                                        <input id="ebscohostwindow" name="ebscohostwindow" type="hidden" value="1" />
-                                                        <input id="ebscohosturl" name="ebscohosturl" type="hidden" value="http://libprxy.muw.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&site=eds-live&scope=site&type=0&authtype=ip,guest&custid=magn1308&groupid=main&profile=eds" />
-                                                        <input id="ebscohostsearchsrc" name="ebscohostsearchsrc" type="hidden" value="db" />
-                                                        <input id="ebscohostsearchmode" name="ebscohostsearchmode" type="hidden" value="+AND+" />
-                                                        <input id="ebscohostkeywords" name="ebscohostkeywords" type="hidden" value="" />
-                                                        <input id="ebscohostsearchtext" name="ebscohostsearchtext" type="text" class="textbox" />
-                                                        <input type="submit" value="SEARCH" class="bigsearch-button" />
-                                                    </form>
+
+                                                    <input id="searchbox" name="ebscohostsearchtext" type="text" placeholder="Search..." class="textbox" />
+                                                    <input type="submit" value="SEARCH" class="bigsearch-button" onclick="search()"/>
+
                                                     <p class="right"><a href="http://libprxy.muw.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&site=eds-live&scope=site&type=1&authtype=ip,guest&custid=magn1308&groupid=main" class="readon">Advanced Search</a> | <a href="http://libguides.muw.edu/az.php" class="readon">Databases</a></p>
-                                                    <!-- EBSCO discovery Box Ends -->
                                                 </div>
                                             </div>
                                         </div>
