--- a/theW.html
+++ b/theW.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="Wsearch.js"></script>
+    <script type="text/javascript" src="js/Wsearch.js"></script>
     <base href="https://www.muw.edu/library" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="rights" content="©1996-2019 Mississippi University for Women" />
@@ -116,7 +116,6 @@
         }
     </script>
     <!-- End Schema.org -->
-
 </head>
 
 <body class="logo-type-custom demostyle-type-customdemostyle header-type-normal mainbody-overlay-light font-family-bitter font-size-is-default menu-type-dropdownmenu menu-dropdownmenu-position-showcase-a layout-mode-responsive col12 option-com-content menu-library thew_15">
