--- a/Wresults.html
+++ b/Wresults.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="Wsearch.js"></script>
+    <script type="text/javascript" src="js/Wsearch.js"></script>
     <base href="https://www.muw.edu/library" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="rights" content="©1996-2019 Mississippi University for Women" />
@@ -119,7 +119,7 @@
 
 </head>
 
-<body class="logo-type-custom demostyle-type-customdemostyle header-type-normal mainbody-overlay-light font-family-bitter font-size-is-default menu-type-dropdownmenu menu-dropdownmenu-position-showcase-a layout-mode-responsive col12 option-com-content menu-library thew_15">
+<body onload="search()" class="logo-type-custom demostyle-type-customdemostyle header-type-normal mainbody-overlay-light font-family-bitter font-size-is-default menu-type-dropdownmenu menu-dropdownmenu-position-showcase-a layout-mode-responsive col12 option-com-content menu-library thew_15">
     <div id="rt-page-surround">
         <div class="rt-pagesurround-overlay">
             <div id="rt-body-surround">
@@ -192,7 +192,7 @@
                                                     <script src="https://support.ebscohost.com/eit/scripts/ebscohostsearch.js" type="text/javascript"></script>
 
                                                     <input id="searchbox" name="ebscohostsearchtext" type="text" placeholder="Search..." class="textbox" />
-                                                    <input type="submit" value="SEARCH" class="bigsearch-button" onclick="search()"/>
+                                                    <input type="submit" value="SEARCH" class="bigsearch-button" onclick="redir()"/>
 
                                                     <p class="right"><a href="http://libprxy.muw.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&site=eds-live&scope=site&type=1&authtype=ip,guest&custid=magn1308&groupid=main" class="readon">Advanced Search</a> | <a href="http://libguides.muw.edu/az.php" class="readon">Databases</a></p>
                                                 </div>
@@ -229,19 +229,21 @@
 													<th>Institution</th>
 													<th>Dates</th>
 													<th>Subject Headings</th>
-												</tr>
-												<tr style="height: 100px">
-													<td>Adrienne, Alberta Collection</td>
-													<td>Jackson State University - Margaret Walker Center</td>
-													<td>1970s</td>
-													<td>African American History<td>
-												</tr>
-												<tr style="height: 100px">
-													<td>Daughters of the American Revolution Collection</td>
-													<td>Delta State University - Charles W. Capps, Jr. Archives and Museum</td>
-													<td>1931-1998</td>
-													<td>Journalism</td>
-												</tr>
+                                                </tr>
+                                                <div id="wResults">
+                                                    <tr style="height: 100px">
+                                                        <td>Adrienne, Alberta Collection</td>
+                                                        <td>Jackson State University - Margaret Walker Center</td>
+                                                        <td>1970s</td>
+                                                        <td>African American History<td>
+                                                    </tr>
+                                                    <tr style="height: 100px">
+                                                        <td>Daughters of the American Revolution Collection</td>
+                                                        <td>Delta State University - Charles W. Capps, Jr. Archives and Museum</td>
+                                                        <td>1931-1998</td>
+                                                        <td>Journalism</td>
+                                                    </tr>
+                                                </div>
 											</table>
 											
 											
