--- a/theW.html
+++ b/theW.html
@@ -190,7 +190,7 @@
                                                 <div style="margin-left: 25px; width: 100%;">
                                                     <script src="https://support.ebscohost.com/eit/scripts/ebscohostsearch.js" type="text/javascript"></script>
 
-                                                    <input id="searchbox" name="ebscohostsearchtext" type="text" placeholder="Search..." class="textbox" />
+                                                    <input style='margin: 10px;' id="searchbox" name="ebscohostsearchtext" type="text" placeholder="Search..." class="textbox" />
                                                     <input type="submit" value="SEARCH" class="bigsearch-button" onclick="redir()"/>
 
                                                     <p class="right"><a href="http://libprxy.muw.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&site=eds-live&scope=site&type=1&authtype=ip,guest&custid=magn1308&groupid=main" class="readon">Advanced Search</a> | <a href="http://libguides.muw.edu/az.php" class="readon">Databases</a></p>
