Small MSU Search Function Changes
Adding some functions for MSU Search

--- a/msstateDrupal.html
+++ b/msstateDrupal.html
@@ -5,6 +5,7 @@
 <head>
 
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" src="js/MSUsearch.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124736054-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -62,9 +63,6 @@
 
     <script src="//cdn01.its.msstate.edu/e/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="js/scripts.js"></script>
-
-
-    <script type="text/javascript" src="MSUsearch.js"></script>
 
 </head>
 
@@ -247,9 +245,9 @@
                                                                         <input id="SearchDB"
                                                                             class="form-control" name="terms"
                                                                             placeholder="Search Repertorium Chronicarum"
-                                                                            type="text">
-                                                                        <button class="form-control" onclick="search()"
-                                                                            title="Search" style="display:inline;">
+                                                                            type="text" style="display:inline; width: 85%">
+                                                                        <button onclick="MSURedir()"
+                                                                            title="Search" style="display:inline; height: 34px; width: 5%;">
                                                                             <i class="glyphicon glyphicon-search">
                                                                                 <span class="sr-only">Search</span>
                                                                             </i>
