MSState Search Function Done
Detail page is being a complete pain in the ass

--- a/browse.html
+++ b/browse.html
@@ -190,7 +190,7 @@
                                 <ul class="menu nav navbar-nav">
                                     <li class="first leaf"><a href="./msstateDrupal.html" title="">Home</a></li>
                                     <li class="leaf"><a href="./objectives.html">Objectives</a></li>
-                                    <li class="leaf active"><a href="./browse.html">Browse</a></li>
+                                    <li class="leaf active"><a href="#" onclick="FreshSearch()">Browse</a></li>
                                     <li class="leaf"><a href="./volunteers.html">Volunteers</a></li>
                                     <li class="last leaf "><a href="./aboutUs.html" class="active">About Us</a></li>
                                 </ul>
@@ -234,7 +234,7 @@
                                                     <div id="block-block-3" class="block block-block">
                                                         <div class="content">
                                                             <div class="jumbotron text-center">
-                                                                <h2>Repertorium Chronicarum</h2>
+                                                                <h2>Repertorium Chronicarum</h2><br>
                                                                 
                                                                 <div class="row search hidden-xs">
                                                                     <div class="col-sm-12">
@@ -263,7 +263,13 @@
                                         </div>
                                     </div>
 
+                                    <style>
+                                        tr:hover {background-color:#f5f5f5; cursor: pointer;}
+                                        th, td {text-align: center;border-left: solid #f0f0f0;border-right: solid #f0f0f0;}
+                                    </style>
+
                                     <div id="content-body" class="content-body">
+
 
                                     </div>
 
