--- a/volunteers.html
+++ b/volunteers.html
@@ -5,6 +5,7 @@
 <head>
 
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" src="js/MSUsearch.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124736054-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -194,7 +195,7 @@
                                 <ul class="menu nav navbar-nav">
                                     <li class="first leaf"><a href="./msstateDrupal.html" title="">Home</a></li>
                                     <li class="leaf"><a href="./objectives.html">Objectives</a></li>
-                                    <li class="leaf"><a href="./browse.html">Browse</a></li>
+                                    <li class="leaf"><a href="#" onclick="FreshSearch()">Browse</a></li>
                                     <li class="leaf active"><a href="./volunteers.html">Volunteers</a></li>
                                     <li class="last leaf "><a href="./aboutUs.html" class="active">About Us</a></li>
                                 </ul>
