--- a/Wresults.html
+++ b/Wresults.html
@@ -227,6 +227,8 @@
 										
 											<style>
 												tr:hover {background-color:#f5f5f5; cursor: pointer;}
+                                                td {color:#919191;}
+                                                th {padding-bottom: 15px;}
 											</style>
 											
                                             <h4 style="padding-left: 100px">Search results...</h4>
