--- a/msstateDrupal.html
+++ b/msstateDrupal.html
@@ -102,7 +102,8 @@
                 <ul class="menu nav navbar-nav">
                     <li class="first leaf active"><a href="/" title="" class="active">Home</a></li>
                     <li class="leaf"><a href="./objectives.html">Objectives</a></li>
-                    <li class="leaf"><a href="./browse.html">Browse</a></li>
+                    <li class="leaf active"><a href="#" onclick="FreshSearch()">Browse</a></li>
+                    <li class="leaf"><a href="./volunteers.html">Volunteers</a></li>
                     <li class="last leaf"><a href="./aboutUs.html">About Us</a></li>
                 </ul>
             </div>
@@ -189,7 +190,7 @@
                                     <li class="first leaf active"><a href="./msstateDrupal.html" title=""
                                             class="active">Home</a></li>
                                     <li class="leaf"><a href="./objectives.html">Objectives</a></li>
-                                    <li class="leaf"><a href="./browse.html">Browse</a></li>
+                                    <li class="leaf"><a href="#" onclick="FreshSearch()">Browse</a></li>
                                     <li class="leaf"><a href="./volunteers.html">Volunteers</a></li>
                                     <li class="last leaf"><a href="./aboutUs.html">About Us</a></li>
                                 </ul>
@@ -235,7 +236,7 @@
                                                             <div class="jumbotron text-center">
                                                                 <h1>Repertorium Chronicarum</h1>
                                                                 <h2>A Bibliography of the Manuscripts of Medieval Latin
-                                                                    Chronicles</h2>
+                                                                    Chronicles</h2><br><br>
                                                                 <div class="row search hidden-xs">
                                                                     <div class="col-sm-12">
                                                                         
@@ -283,7 +284,7 @@
         </div>
         <!-- /#page -->
         <!-- footer -->
-        <footer id="msu-footer" class="msu-footer">
+        <footer id="msu-footer" class="msu-footer" style="position: fixed; bottom: 0;left: 0;right: 0;">
 
             <div class="container-fluid clearfix">
                 <div class="row">
