--- a/theW.html
+++ b/theW.html
@@ -210,7 +210,7 @@
 
                 </div>
 
-                <footer id="rt-footer-surround">
+                <footer id="rt-footer-surround" style="position: fixed;bottom: 0; left: 0; right: 0;">
                     <div id="rt-bottom">
                         <div class="rt-container">
                             <div class="rt-flex-container">
