--- a/MSUdetails.html
+++ b/MSUdetails.html
@@ -66,7 +66,7 @@
 
 </head>
 
-<body onload="msstateDetails()" class="basedrupal  simplean ">
+<body onload="viewDetails()" class="basedrupal  simplean ">
 
     <!--[if lte IE 9]><p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 
