Added Search By Boxes On Both Projects
Can now select what to search by via drop boxes. The one for the W looks like trash, but it functions. Will fix later.

--- a/MSUdetails.html
+++ b/MSUdetails.html
@@ -66,7 +66,7 @@
 
 </head>
 
-<body onload="viewDetails()" class="basedrupal  simplean ">
+<body onload="viewDetails(); otherCopies()" class="basedrupal  simplean ">
 
     <!--[if lte IE 9]><p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 
@@ -206,6 +206,16 @@
         <!-- .page -->
         <div id="page" class="page">
 
+            <div id="sidebar" class="jumbotron" style="min-height: 174.4px;width: 17%;right: 0;float: right;margin-right: 20px;text-align: center;">
+                <h2>Other Instances</h2><br>
+                <style>
+                p:hover {text-decoration: underline;cursor: pointer;}
+                </style>
+
+                <div id="otherCopies">
+                </div>
+            </div>
+
             <div class="container-fluid clearfix">
                 <div class="row">
                     <div class="col-sm-12">
@@ -245,7 +255,13 @@
                                                                         <input id="SearchDB"
                                                                             class="form-control" name="terms"
                                                                             placeholder="Search Repertorium Chronicarum"
-                                                                            type="text" style="display: inline; width: 85%">
+                                                                            type="text" style="display: inline; width: 69%">
+                                                                        <select id="category" class="form-control"style="width: 16%;display:inline;">
+                                                                            <option id="ManuscriptName" value="ManuscriptName">Manuscript Name</option>
+                                                                            <option id="LibraryName" value="LibraryName">Library Name</option>
+                                                                            <option id="Country" value="Country">Country</option>
+                                                                            <option id="Author" value="Author">Author</option>
+                                                                        </select>
                                                                         <button onclick="MSURedir()"
                                                                             title="Search" style="display:inline; height: 34px; width: 5%;">
                                                                             <i class="glyphicon glyphicon-search">
