--- a/browse.html
+++ b/browse.html
@@ -245,7 +245,13 @@
                                                                         <input id="SearchDB"
                                                                             class="form-control" name="terms"
                                                                             placeholder="Search Repertorium Chronicarum"
-                                                                            type="text" style="display: inline; width: 85%">
+                                                                            type="text" style="display: inline; width: 69%">
+                                                                        <select id="category" class="form-control"style="width: 16%;display:inline;">
+                                                                            <option id="ManuscriptName" value="ManuscriptName">Manuscript Name</option>
+                                                                            <option id="LibraryName" value="LibraryName">Library Name</option>
+                                                                            <option id="Country" value="Country">Country</option>
+                                                                            <option id="Author" value="Author">Author</option>
+                                                                        </select>
                                                                         <button onclick="MSURedir()"
                                                                             title="Search" style="display:inline; height: 34px; width: 5%;">
                                                                             <i class="glyphicon glyphicon-search">
