--- a/Wdetails.html
+++ b/Wdetails.html
@@ -198,8 +198,13 @@
                                                 <div style="margin-left: 25px; width: 100%;">
                                                     <script src="https://support.ebscohost.com/eit/scripts/ebscohostsearch.js" type="text/javascript"></script>
 
-                                                    <input style='margin: 10px;' id="searchbox" name="ebscohostsearchtext" type="text" placeholder="Search..." class="textbox" />
-                                                    <input type="submit" value="SEARCH" class="bigsearch-button" onclick="redir()"/>
+                                                    <input style='margin: 10px;width: 66.5%' id="searchbox" name="ebscohostsearchtext" type="text" placeholder="Search..." class="textbox" />
+                                                    <select id="category" class="bigsearch-button" style="margin-right: 10px;width: 16%;display:inline;">
+                                                        <option id="CollectionTitle" value="CollectionTitle">Collection Title</option>
+                                                        <option id="Institution" value="Institution">Institution</option>
+                                                        <option id="SubjectHeadings" value="SubjectHeadings">Subject Headings</option>
+                                                    </select>
+                                                    <input style="width: 10%" type="submit" value="SEARCH" class="bigsearch-button" onclick="redir()"/>
 
                                                     <p class="right"><a href="http://localhost/seniorproject/theW.html" class="readon">Home</a> | <a href="http://libprxy.muw.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&site=eds-live&scope=site&type=1&authtype=ip,guest&custid=magn1308&groupid=main" class="readon">Advanced Search</a> | <a href="http://libguides.muw.edu/az.php" class="readon">Databases</a></p>
                                                 </div>
