--- a/volunteers.html
+++ b/volunteers.html
@@ -239,7 +239,9 @@
                                                     <div id="block-block-3" class="block block-block">
                                                         <div class="content">
                                                             <div class="jumbotron text-left">
+                                                              <!--Title of page-->
                                                                 <h1>Volunteers</h1>
+                                                                <!--User viewable content on page-->
                                                                 <p>We need help from four kinds of scholars: <br><br>
                                                                 </p>
                                                                 <p class="tab">
