--- a/MSUdetails.html
+++ b/MSUdetails.html
@@ -4,6 +4,13 @@
 
 <head>
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+    crossorigin=""></script>
+
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124736054-1"></script>
     <script>
@@ -206,7 +213,7 @@
         <!-- .page -->
         <div id="page" class="page">
 
-            <div id="sidebar" class="jumbotron" style="min-height: 174.4px;width: 17%;right: 0;float: right;margin-right: 20px;text-align: center;">
+        <div id="sidebar" class="jumbotron" style="display: inline-block;min-height: 174.4px;max-width: 17%;right: 0;float: right;margin-right: 20px;text-align: center;">
                 <h2>Other Instances</h2><br>
                 <style>
                 p:hover {text-decoration: underline;cursor: pointer;}
@@ -255,8 +262,8 @@
                                                                         <input id="SearchDB"
                                                                             class="form-control" name="terms"
                                                                             placeholder="Search Repertorium Chronicarum"
-                                                                            type="text" style="display: inline; width: 69%">
-                                                                        <select id="category" class="form-control"style="width: 16%;display:inline;">
+                                                                            type="text" style="display: inline;max-width: 69%;flex-grow: 1;">
+                                                                        <select id="category" class="form-control"style="max-width: 16%;display:inline;">
                                                                             <option id="ManuscriptName" value="ManuscriptName">Manuscript Name</option>
                                                                             <option id="LibraryName" value="LibraryName">Library Name</option>
                                                                             <option id="Country" value="Country">Country</option>
