My (Failed) attempt to get the map working
This is so annoying

--- a/MSUdetails.html
+++ b/MSUdetails.html
@@ -197,7 +197,7 @@
                                 <ul class="menu nav navbar-nav">
                                     <li class="first leaf"><a href="./msstateDrupal.html" title="">Home</a></li>
                                     <li class="leaf"><a href="./objectives.html">Objectives</a></li>
-                                    <li class="leaf active"><a href="#" onclick="FreshSearch()">Browse</a></li>
+                                    <li class="leaf"><a href="./browse.html" onclick="FreshSearch()">Browse</a></li>
                                     <li class="leaf"><a href="./volunteers.html">Volunteers</a></li>
                                     <li class="last leaf "><a href="./aboutUs.html" class="active">About Us</a></li>
                                 </ul>
