Integrated The Login and Create Account Pages
They are now linked to the main set of pages. Database and account to be added.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -123,17 +123,19 @@
 
                         <div class="row">
 
-                            <div class="col-sm-6 logo">
-                                <div class="links-container">
+                            <div class="col-sm-6 logo" style="width: 900px; display: flex;">
+                                <div class="links-container" style="width: 50%;">
+                                    <a class="site-link"><img src="./Images/Warsaw.png" style="width: 100%;" /></a></div>
+                                <div class="links-container" style="width: 50%;">
                                     <a class="msu-link" href="https://www.msstate.edu/"
                                         title="Mississippi State University">Mississippi State University</a>
                                     <a class="site-link" href="http://lib.msstate.edu/"
-                                        title="Mississippi State Library"><img src="./HORIZONTAL_PRINT_white.jpg"
-                                            alt="Mississippi State Library" title="Mississippi State Library" /></a>
+                                        title="Mississippi State Library"><img src="./Images/HORIZONTAL_PRINT_white.jpg"
+                                            alt="Mississippi State Library" title="Mississippi State Library" style="width: 100%;"/></a>
                                 </div>
                             </div>
 
-                            <div class="col-sm-6">
+                            <div class="col-sm-6" style="width: 300px">
 
                                 <div class="row secondary hidden-xs">
                                     <div class="col-sm-12">
@@ -149,30 +151,32 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="row search hidden-xs">
-                                        <div class="col-sm-12">
+                                </div>
 
-                                            <form class="search-form" role="search"
-                                                action="https://www.msstate.edu/site-index/" method="get">
-                                                <label for="search-terms" class="sr-only">Search MSSTATE</label>
-                                                <button type="submit" class="form-control" title="Search">
-                                                    <i class="glyphicon glyphicon-search"><span
-                                                            class="sr-only">Search</span></i>
-                                                </button>
-                                                <input class="form-control" id="search-terms" name="terms"
-                                                    placeholder="Search MSSTATE" type="text">
-                                            </form>
+                                <div class="row search hidden-xs">
+                                    <div class="col-sm-12">
 
-                                        </div>
+                                        <form class="search-form" role="search"
+                                            action="https://www.msstate.edu/site-index/" method="get" style="width: 90%;">
+                                            <label for="search-terms" class="sr-only">Search MSSTATE</label>
+                                            <button type="submit" class="form-control" title="Search">
+                                                <i class="glyphicon glyphicon-search"><span
+                                                        class="sr-only">Search</span></i>
+                                            </button>
+                                            <input class="form-control" id="search-terms" name="terms"
+                                                placeholder="Search MSSTATE" type="text">
+                                        </form>
+
                                     </div>
-
                                 </div>
 
                             </div>
 
                         </div>
+
                     </div>
                 </div>
+            </div>
 
         </header>
         <!-- /header -->
@@ -190,8 +194,8 @@
                                     <li class="leaf"><a href="./objectives.html">Objectives</a></li>
                                     <li class="leaf"><a href="#" onclick="FreshSearch()">Browse</a></li>
                                     <li class="leaf"><a href="./volunteers.html">Volunteers</a></li>
-                                    <li class="last leaf active"><a href="./aboutUs.html" class="active">About Us</a>
-                                    </li>
+                                    <li class="leaf active"><a href="./aboutUs.html">About Us</a></li>
+                                    <li class="last leaf"><a href="./login.html">Login</a></li>
                                 </ul>
                             </ul>
                         </div>
@@ -239,10 +243,10 @@
                                                                 <p>Professor (retired)</p>
                                                                 <p>(510)-848-1800</p>
                                                                 <p>sothsegger@comcast.net</p><br><br>
-                                                                <h3>Dr. habil. Jacek Soszynski</h3>
-                                                                <p>Professor, University of Warsaw</p>
+                                                                <h3>Prof. Dr. Jacek Soszynski</h3>
+                                                                <p>Institute for the History of Science, Polish Academy of Sciences</p>
                                                                 <p>+48 22 5520239</p>
-                                                                <p>jacek.soszynski@uw.edu.pl</p>
+                                                                <p>pineus22@gmail.com</p>
                                                             </div>
                                                         </div>
                                                     </div>
