--- a/CreateUser.html
+++ b/CreateUser.html
@@ -124,17 +124,19 @@
 
                         <div class="row">
 
-                            <div class="col-sm-6 logo">
-                                <div class="links-container">
+                            <div class="col-sm-6 logo" style="width: 900px; display: flex;">
+                                <div class="links-container" style="width: 50%;">
+                                    <a class="site-link"><img src="./Images/Warsaw.png" style="width: 100%;" /></a></div>
+                                <div class="links-container" style="width: 50%;">
                                     <a class="msu-link" href="https://www.msstate.edu/"
                                         title="Mississippi State University">Mississippi State University</a>
                                     <a class="site-link" href="http://lib.msstate.edu/"
-                                        title="Mississippi State Library"><img src="./HORIZONTAL_PRINT_white.jpg"
-                                            alt="Mississippi State Library" title="Mississippi State Library" /></a>
+                                        title="Mississippi State Library"><img src="./Images/HORIZONTAL_PRINT_white.jpg"
+                                            alt="Mississippi State Library" title="Mississippi State Library" style="width: 100%;"/></a>
                                 </div>
                             </div>
 
-                            <div class="col-sm-6">
+                            <div class="col-sm-6" style="width: 300px">
 
                                 <div class="row secondary hidden-xs">
                                     <div class="col-sm-12">
@@ -149,31 +151,33 @@
                                                         href="https://www.msstate.edu/newsroom/">News</a></li>
                                             </ul>
                                         </div>
+                                    </div>
+                                </div>
 
-                                        <div class="row search hidden-xs">
-                                            <div class="col-sm-12">
+                                <div class="row search hidden-xs">
+                                    <div class="col-sm-12">
 
-                                                <form class="search-form" role="search"
-                                                    action="https://www.msstate.edu/site-index/" method="get">
-                                                    <label for="search-terms" class="sr-only">Search MSSTATE</label>
-                                                    <button type="submit" class="form-control" title="Search">
-                                                        <i class="glyphicon glyphicon-search"><span
-                                                                class="sr-only">Search</span></i>
-                                                    </button>
-                                                    <input class="form-control" id="search-terms" name="terms"
-                                                        placeholder="Search MSSTATE" type="text">
-                                                </form>
-
-                                            </div>
-                                        </div>
+                                        <form class="search-form" role="search"
+                                            action="https://www.msstate.edu/site-index/" method="get" style="width: 90%;">
+                                            <label for="search-terms" class="sr-only">Search MSSTATE</label>
+                                            <button type="submit" class="form-control" title="Search">
+                                                <i class="glyphicon glyphicon-search"><span
+                                                        class="sr-only">Search</span></i>
+                                            </button>
+                                            <input class="form-control" id="search-terms" name="terms"
+                                                placeholder="Search MSSTATE" type="text">
+                                        </form>
 
                                     </div>
-
                                 </div>
 
                             </div>
+
                         </div>
+
                     </div>
+                </div>
+            </div>
 
         </header>
         <!-- /header -->
@@ -187,12 +191,12 @@
                         <div class="menu-container alter-bootstrap-dropdown ">
                             <ul class="menu nav navbar-nav">
                                 <ul class="menu nav navbar-nav">
-                                    <li class="first leaf active"><a href="./msstateDrupal.html" title=""
-                                            class="active">Home</a></li>
+                                    <li class="first leaf"><a href="./msstateDrupal.html" title="">Home</a></li>
                                     <li class="leaf"><a href="./objectives.html">Objectives</a></li>
                                     <li class="leaf"><a href="#" onclick="FreshSearch()">Browse</a></li>
                                     <li class="leaf"><a href="./volunteers.html">Volunteers</a></li>
-                                    <li class="last leaf"><a href="./aboutUs.html">About Us</a></li>
+                                    <li class="leaf"><a href="./aboutUs.html">About Us</a></li>
+                                    <li class="last leaf active"><a href="./login.html">Login</a></li>
                                 </ul>
                             </ul>
                         </div>
@@ -233,18 +237,19 @@
                                                 <div class="col-sm-12 ">
                                                     <div id="block-block-3" class="block block-block">
                                                         <div class="content">
-                                                            <div align="center" class="jumbotron text-center">
+                                                            <div class="jumbotron text-center">
+                                                                <h2>Create New Account</h2>
                                                                 <form action="/action_page.php">
-                                                                    <label for="fname">Enter Username:</label>
-                                                                    <input type="text" id="fname" name="fname"><br><br>
-                                                                    <label for="lname">Enter password:</label>
-                                                                    <input type="text" id="lname" name="lname"><br><br>
-                                                                    <label for="verifyPass">Confirm Password</label>
-                                                                    <input type="password" id="confirmPass" name="confirmPass"><br><br>
-                                                                    <label for="email">Enter Email</label>
-                                                                    <input type="text" id="userEmail" name="userEmail"><br><br>
-                                                                    <label for="userUni">Enter University</label>
-                                                                    <input type="text" id="userUni" name="userUni"><br><br>
+                                                                    <label for="fname" style="display:inline-block;">Username:</label>
+                                                                    <input type="text" id="fname" name="fname" minlength="5" maxlength="25" style="display:inline-block;"><br><br>
+                                                                    <label for="lname" style="display:inline-block;">Password:</label>
+                                                                    <input type="text" id="lname" name="lname" minlength="5" maxlength="52" style="display:inline-block;"><br><br>
+                                                                    <label for="verifyPass" style="display:inline-block;">Confirm Password</label>
+                                                                    <input type="password" id="confirmPass" name="confirmPass" minlength="5" maxlength="52" style="display:inline-block;"><br><br>
+                                                                    <label for="email" style="display:inline-block;">Email</label>
+                                                                    <input type="text" id="userEmail" name="userEmail" maxlength="256" style="display:inline-block;"><br><br>
+                                                                    <label for="userUni" style="display:inline-block;">Institution:</label>
+                                                                    <input type="text" id="userUni" name="userUni" maxlength="256" style="display:inline-block;"><br><br>
                                                                     <input type="submit" value="Submit">
                                                                 </form>
 
