--- a/objectives.html
+++ b/objectives.html
@@ -114,7 +114,6 @@
 
     <div id="wrapper" class="wrapper clearfix">
 
-        <!-- header -->
         <header id="msu-header" class="msu-header ">
 
             <div class="container-fluid clearfix">
@@ -123,17 +122,19 @@
 
                         <div class="row">
 
-                            <div class="col-sm-6 logo">
-                                <div class="links-container">
+                            <div class="col-sm-6 logo" style="width: 900px; display: flex;">
+                                <div class="links-container" style="width: 50%;">
+                                    <a class="site-link"><img src="./Images/Warsaw.png" style="width: 100%;" /></a></div>
+                                <div class="links-container" style="width: 50%;">
                                     <a class="msu-link" href="https://www.msstate.edu/"
                                         title="Mississippi State University">Mississippi State University</a>
                                     <a class="site-link" href="http://lib.msstate.edu/"
-                                        title="Mississippi State Library"><img src="./HORIZONTAL_PRINT_white.jpg"
-                                            alt="Mississippi State Library" title="Mississippi State Library" /></a>
+                                        title="Mississippi State Library"><img src="./Images/HORIZONTAL_PRINT_white.jpg"
+                                            alt="Mississippi State Library" title="Mississippi State Library" style="width: 100%;"/></a>
                                 </div>
                             </div>
 
-                            <div class="col-sm-6">
+                            <div class="col-sm-6" style="width: 300px">
 
                                 <div class="row secondary hidden-xs">
                                     <div class="col-sm-12">
@@ -155,7 +156,7 @@
                                     <div class="col-sm-12">
 
                                         <form class="search-form" role="search"
-                                            action="https://www.msstate.edu/site-index/" method="get">
+                                            action="https://www.msstate.edu/site-index/" method="get" style="width: 90%;">
                                             <label for="search-terms" class="sr-only">Search MSSTATE</label>
                                             <button type="submit" class="form-control" title="Search">
                                                 <i class="glyphicon glyphicon-search"><span
@@ -192,7 +193,8 @@
                                     <li class="leaf active"><a href="./objectives.html">Objectives</a></li>
                                     <li class="leaf"><a href="#" onclick="FreshSearch()">Browse</a></li>
                                     <li class="leaf"><a href="./volunteers.html">Volunteers</a></li>
-                                    <li class="last leaf"><a href="./aboutUs.html" class="active">About Us</a></li>
+                                    <li class="leaf"><a href="./aboutUs.html">About Us</a></li>
+                                    <li class="last leaf"><a href="./login.html">Login</a></li>
                                 </ul>
                             </ul>
                         </div>
